# FAMM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_tests.sh
lib/: CMakeLists.txt
lib/antlr/: .gitignore  README.md
lib/backend/: CMakeLists.txt
lib/backend/src/: FAMMIRGenerator.cpp  FAMMIRGenerator.h  FAMMVisiter.cpp  FAMMVisiter.h  JIT.h  Nothing.cpp  Nothing.h  Scope.h
lib/backend/src/FammIR/: FammIR.h
lib/backend/src/Visitors/: Visitor.cpp  Visitor.h
lib/backend/src/builders/: FammBuilder.h
lib/backend/src/customVisitors/: CustomVisitor.cpp  CustomVisitor.h
lib/backend/src/externalFunctions/: ExternalFunctions.cpp  ExternalFunctions.h
lib/backend/src/gc/: gc.cpp  gc.h
lib/backend/src/helpers/: Helpers.cpp  helpers.cpp  helpers.h
lib/backend/src/interpreter/: CustomInterpreter.cpp  CustomInterpreter.h  Interpreter.cpp  Interpreter.h
lib/backend/src/logic/: Helper.cpp  Helper.h
lib/backend/src/run/: JIT.h  ObjectEmitter.h
lib/backend/src/visitors/: CreateComparison.cpp  VisitBlock.cpp  VisitDeclarationDefinition.cpp  VisitExpression.cpp  VisitFunction.cpp  VisitIfBlock.cpp  VisitLoopBlock.cpp  VisitProgram.cpp  VisitStatement.cpp  VisitType.cpp  VisitWhileBlock.cpp  Visitor.cpp  Visitor.h
lib/fammfrontend/: .gitignore  README.md  pyproject.toml  test.famm
lib/fammfrontend-cpp/: CMakeLists.txt  FAMMBaseListener.cpp  FAMMBaseListener.h  FAMMLexer.cpp  FAMMLexer.h  FAMMListener.h  FAMMParser.cpp  FAMMParser.h
lib/fammfrontend/fammfrontend/: VisitorInterp.py
lib/fammfrontend/fammfrontend/src/: Driver.py
lib/fammfrontend/grammars/: FAMM.g4
lib/fammfrontend/scripts/: Driver.py
lib/fammfrontend/src/: Driver.py
lib/frontend/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
lib/frontend/grammars/: FAMM.g4  FAMM_v1.g4  FAMM_v2.g4  FAMM_v4.g4  FAMM_v4g.g4
lib/frontend/src/: Driver.py
lib/utils/: CLIManager.cpp  CLIManager.h  CMakeLists.txt
tests/: test_true2.famm  test_true3.famm
