[build-system]
requires = ['setuptools >= 61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'fammfrontend'
version = '1.0.0'
authors = [
    { name = 'Fedor' },
    { name = 'Alena' },
    { name = 'Misha' },
    { name = 'Maxim' },
]
description = 'Lexer, Parser, and AST for the FAMM language.'
requires-python = '>=3.10'
dependencies = [
    'antlr4-python3-runtime'
]

[tool.setuptools.packages]
find = { include = ["fammfrontend*"] }